hphp/test/slow/case_type_bad_enum.php.expectf
Fatal error: Invalid base type for enum E in %s/case_type_bad_enum.php on line 9
